[package]
name = "graft"
version = "0.1.0"
edition = "2024"
description = "A read-first, graph-first terminal Git navigator"
license = "MIT"
repository = "https://github.com/BananaBites/graft"
readme = "README.md"
keywords = ["git", "tui", "terminal", "diff", "log"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
ansi-to-tui = "7"
crossterm = "0.29"
dirs = "6"
regex = "1"
ratatui = "0.29"
unicode-width = "0.2"
